-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 12, 13
-
Component/s: hotspot
-
b21
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8230351 | 11.0.6 | Thomas Stuefe | P4 | Resolved | Fixed | b01 |
VM.metaspace has a number of small issues which can be improved:
1) When used with options "show-loaders" and "show-classes", it does list metaspace usage per CLD and the classes loaded. However, it also lists classes whose meta data reside in CDS, which can be confusing because they do not contribute to metaspace footprint printed below.
-> Classes whose meta data reside in CDS should clearly marked.
2) It would be helpful to print a summary of number of loaded classes even if not printing the class list.
3) Printing the instance classes and array classes separately in the "--Totals:--" summary is actually not that helpful. That code may be removed to simplify coding.
1) When used with options "show-loaders" and "show-classes", it does list metaspace usage per CLD and the classes loaded. However, it also lists classes whose meta data reside in CDS, which can be confusing because they do not contribute to metaspace footprint printed below.
-> Classes whose meta data reside in CDS should clearly marked.
2) It would be helpful to print a summary of number of loaded classes even if not printing the class list.
3) Printing the instance classes and array classes separately in the "--Totals:--" summary is actually not that helpful. That code may be removed to simplify coding.
- backported by
-
JDK-8230351 Small VM.metaspace improvements
-
- Resolved
-