8222015: Small VM.metaspace improvements

Reviewed-by: jiangli, coleenp