src/hotspot/share/memory/metaspace/printCLDMetaspaceInfoClosure.hpp
@@ -52,6 +52,11 @@ public:
   uintx                           _num_loaders_by_spacetype [Metaspace::MetaspaceTypeCount];
   ClassLoaderMetaspaceStatistics  _stats_by_spacetype [Metaspace::MetaspaceTypeCount];
 
+  uintx                           _num_classes_by_spacetype [Metaspace::MetaspaceTypeCount];
+  uintx                           _num_classes_shared_by_spacetype [Metaspace::MetaspaceTypeCount];
+  uintx                           _num_classes;
+  uintx                           _num_classes_shared;
+
   PrintCLDMetaspaceInfoClosure(outputStream* out, size_t scale, bool do_print,
       bool do_print_classes, bool break_down_by_chunktype);
   void do_cld(ClassLoaderData* cld);
